# Sofa

./: 3_2Oggetto_phantom_CGLinear - Copia.scn  CMakeLists.txt  CuboTP_Dt00001.scn  EasyCollision1.cpp  EasyCollision1.h  EasyCollision10.cpp  EasyCollision10.h  EasyCollision11.cpp  EasyCollision11.h  EasyCollision12.cpp  EasyCollision12.h  EasyCollision13.cpp  EasyCollision13.h  EasyCollision14.cpp  EasyCollision14.h  EasyCollision15.cpp  EasyCollision15.h  EasyCollision16.cpp  EasyCollision16.h  EasyCollision17.cpp  EasyCollision17.h  EasyCollision18.cpp  EasyCollision18.h  EasyCollision19.cpp  EasyCollision19.h  EasyCollision2.cpp  EasyCollision2.h  EasyCollision20.cpp  EasyCollision20.h  EasyCollision21.cpp  EasyCollision21.h  EasyCollision22.cpp  EasyCollision22.h  EasyCollision23.cpp  EasyCollision23.h  EasyCollision24.cpp  EasyCollision24.h  EasyCollision25.cpp  EasyCollision25.h  EasyCollision26.cpp  (+84 more)
Dani/: CMakeLists.txt  DaniConfig.cmake.in  PluginExampleTest.scn
Dani/Dani_test/: CMakeLists.txt  MyBehaviorModel_test.cpp
Dani/src/Dani/: EasyCollision1.cpp  EasyCollision1.h  EasyCollision2.cpp  EasyCollision2.h  MyBehaviorModel.cpp  MyBehaviorModel.h  MyCutting.h  MyDataWidgetUnsigned.cpp  MyDataWidgetUnsigned.h  MyMappingPendulumInPlane.cpp  MyMappingPendulumInPlane.h  MyMappingPendulumInPlane.inl  MyProjectiveConstraintSet.cpp  MyProjectiveConstraintSet.h  MyProjectiveConstraintSet.inl  MyVisualModel.cpp  MyVisualModel.h  config.h.in  initPluginExample.cpp
dani/: 0_TopoMapping.scn  Collisione_mollo.scn  Collisione_mollo_mesh.scn  PELLE_FUNZIONANTE.scn  PELLE_SEMPLICE.scn  Pelle_Pancia_Valida.scn  bisturi_Phantom.scn  collisione_rigida.scn  oggeto_mollo_mesh.scn  oggeto_mollo_mesh_tetra.scn  oggetto collisione es5.scn  oggetto collisione.scn  oggetto con spiegazione.scn  oggetto_duro_taglia.scn  oggetto_mollo.scn  oggetto_mollo_mesh.scn  pelle.scn  phantom.scn  topology_cilindro.scn  visual.scn
dani/TAGLIO/: IncisionTrianglesProcess.scn  IncisionhexaProcess.scn  SimpleTesselatedTetraTopologicalMapping.scn  oggetto_mollo_mesh_tesseleted.scn
dani/bisturi/: Oggetto_diviso_in_2.scn  Pelle_Valida_bisturi.scn  bisturi.scn  bisturi_Phantom.scn
dani/eliminazione_mesh/: 1eliminazione_mesh.scn  2eliminazione_mesh_strumento.scn  3eliminazione_mesh_phantom.scn  4oggetto_da_eliminare.scn  5oggetto_finale - Copia.scn  Pelle_Valida.scn
dani/pelle/: Modello_pelle_valida.scn  tetrahedralMesh.scn  topology_cilindro.scn
dani/taglio_2d/: oggetto.scn  oggetto_phantom.scn
dani/taglio_Phantom/: 1Taglio.scn  1_oggetto.scn  2_oggetto_taglio.scn
modello_eterogeneo/: Behavior1.scn  Behavior10.scn  Behavior11.scn  Behavior12.scn  Behavior13.scn  Behavior14.scn  Behavior15.scn  Behavior16.scn  Behavior17.scn  Behavior18.scn  Behavior19.scn  Behavior2.scn  Behavior20.scn  Behavior21.scn  Behavior22.scn  Behavior23.scn  Behavior24.scn  Behavior25.scn  Behavior26.scn  Behavior27.scn  Behavior28.scn  Behavior29.scn  Behavior3.scn  Behavior30.scn  Behavior31.scn  Behavior32.scn  Behavior33.scn  Behavior34.scn  Behavior35.scn  Behavior36.scn  Behavior37.scn  Behavior38.scn  Behavior39.scn  Behavior4.scn  Behavior40.scn  Behavior41.scn  Behavior42.scn  Behavior43.scn  Behavior44.scn  Behavior45.scn  (+11 more)
taglio_2d/: oggetto_phantom.scn
